overlapping metadata-view over header fix

--- a/client/css/o2r.css
+++ b/client/css/o2r.css
@@ -28,6 +28,9 @@ body{
 	height: 64px !important;
 }
 
+#o2r-header{
+	z-index:100;
+}
 /*
 .no-link{
 	color: 0, 0, 0, 0.87 !important;
